melhorias de qualidade e otimizacao de codigo